# secure-file-encryption-tool

./: .gitignore  LICENSE  README.md  USER_MANUAL.md  build_exe.bat  build_installer.bat  decrypt.py  encrypt.py  gui.py  installer.iss  main.py  pyproject.toml  utils.py
