[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-file-encryption-tool"
version = "0.1.0"
description = "A desktop tool for encrypting and decrypting files using a key or password."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Secure File Encryption Tool" }
]
dependencies = [
    "cryptography>=41.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities"
]

[project.scripts]
secure-file-encryption-tool = "gui:main"
secure-file-encryption-cli = "main:main"

[tool.setuptools]
py-modules = ["main", "gui", "encrypt", "decrypt", "utils"]
include-package-data = true
